MB-47139 magma-kvstore: Adapt to SetMaxOpenFiles API change

The global magma library method SetMaxOpenFiles() should be called only
after initializing atleast one magma db instance. The data structures
used by the method (memory guard switch) is only initialized during the
db instance construction.

The API is now moved to a db instance level method to
avoid the ambiguity of the API usage.

Change-Id: I75b60c85fc0590fbb722a7c604c6e445e66954da
Reviewed-on: https://review.couchbase.org/c/kv_engine/+/172523
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>
Well-Formed: Restriction Checker